added synthetic LVCs for new switch patterns, catch variables